# AutoBTD6

./: .gitignore  consts.py  convert_playthrough.py  generate_supported_maps_table.py  helper.py  insert_new_map.py  instructions_file_manager.py  ocr.py  ocr_image.py  pyproject.toml  record_playthrough.py  replay.py  step_types.py  towers.json  update_readme.py  userconfig.json
config/: __init__.py  singletons.py
json_types/: gamemodes_types.py  image_areas_types.py  keybinds_types.py  maps_types.py  playthrough_stats_types.py  towers_types.py  userconfig_types.py
utils/: image.py  utils.py
