[project]
name = "autobtd6"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ahk[binary]>=1.8.4",
    "keras>=3.10.0",
    "keyboard>=0.13.5",
    "numpy>=2.1.3",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "ruff>=0.12.2",
    "tensorflow>=2.19.0",
]

[tool.pyright]
typeCheckingMode = "off"
ignore = ["*"]

[tool.ruff]
line-length = 320
exclude = [
    "replay_orig.py",       # keep original replay file unmodified
    "temp_code_changes.py", # temporary file for code changes
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "I",   # isort
    # "UP",
    "FURB",
    "RUF",
    "UP032", # Use f-string instead of format call	
]
ignore = [
    "SIM102", # merge nested if statements
    "SIM114", # combine if statements with same body
]
